fixed social icons that break the layout when window size is removed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,6 +5,9 @@
 		overflow-y: auto;
 		display: block;
 	}
+  #od-head .right_organization {
+      width: 100%;
+  }
 }
 
 @media screen and (max-width: 980px) {
@@ -69,7 +72,7 @@
 
 @media only screen and (max-width: 768px) {
     #od-head .right_organization {
-        width: 45%;
+        width: 100%;
     }
     #od-head h1{
         font-size: 27px;
@@ -89,9 +92,6 @@
         padding: 10px 0px 0px;
     }
 
-    #od-head .right_organization {
-        width: 45%;
-    }
     #od-head h1{
         font-size: 25px;
         font-family: "Droid Serif";
